[gd_scene load_steps=6 format=3 uid="uid://l67h7vvqgmhc"]

[ext_resource type="Script" uid="uid://by5vpooqycph" path="res://components/hand/enemy_hand/enemy_hand.gd" id="1_iaq8d"]
[ext_resource type="PackedScene" uid="uid://dstu5tn8f1k63" path="res://components/hand/enemy_hand/enemy_list.tscn" id="1_kvb42"]
[ext_resource type="PackedScene" uid="uid://b08rtywbsbu8o" path="res://components/card/card.tscn" id="2_kvb42"]
[ext_resource type="StyleBox" uid="uid://fblxv1kfn4or" path="res://themes/panels/hand_border.tres" id="3_6crf1"]
[ext_resource type="Script" uid="uid://bbee8trp4eb73" path="res://components/hand/card_container.gd" id="4_mwce7"]

[node name="EnemyHand" type="VBoxContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -43.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 2
script = ExtResource("1_iaq8d")

[node name="EnemyList" parent="." instance=ExtResource("1_kvb42")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_6crf1")

[node name="CardContainer" type="Control" parent="EnemyPanel"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("4_mwce7")

[node name="Card" parent="EnemyPanel/CardContainer" instance=ExtResource("2_kvb42")]
layout_mode = 1
